# Simplon_ML_Factory

./: .env  .gitignore  README.md  docker-compose.yml  exercice.md  main.py  pyproject.toml
mlruns/artifacts/model/: MLmodel  model.pkl
mlruns/artifacts/model2/: MLmodel  model.pkl
src/api/: Dockerfile  main.py  requirements.txt
src/front/: Dockerfile  app.py  requirements.txt
src/train/: train.py
